--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!-- 찾아오는 길 -->
         <section id="location">
             <div class="wrap">
-                <iframe frameborder="1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.943549978831!2d127.14697441558545!3d37.41480914056017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca85dba316005%3A0x9ae9494abd91aa16!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg64-E7LSM64-ZIDUxOQ!5e0!3m2!1sko!2skr!4v1665106256583!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.943549978831!2d127.14697441558545!3d37.41480914056017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca85dba316005%3A0x9ae9494abd91aa16!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg64-E7LSM64-ZIDUxOQ!5e0!3m2!1sko!2skr!4v1665106256583!5m2!1sko!2skr" width="600" height="450" ></iframe>
                 <div class="right">
                     <hgroup>
                         <h2 class="subject">LOCATION</h2>
